<resources>
    <string name="app_name">UpDate</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="title_activity_maps">Map</string>
    <string name="enter_new_status">Enter New Status</string>
    <string name="update_status">Update Status</string>
    <string name="title_activity_delete">DeleteActivity</string>
    <string name="title_activity_invite_user">InviteUserActivity</string>
    <string name="user"><![CDATA[<User>]]></string>
    <string name="num_group_invites">num group invites</string>
</resources>
