<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_group"
        android:name="com.gatech.update.ui.group.GroupFragment"
        android:label="Group"
        tools:layout="@layout/fragment_group" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.gatech.update.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.gatech.update.ui.account.AccountFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.gatech.update.ui.map.MapFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.gatech.update.ui.logout.LogoutFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_logout" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.gatech.update.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.gatech.update.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>